--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,11 @@ jobs:
         go-version: '1.24'
         
     - name: Build
-      run: go build -o hexfetch-ui -v ./...
+      run: |
+        go mod edit -require fyne.io/fyne@v1.4.3
+        go mod edit -droprequire fyne.io/fyne/v2
+        go mod tidy
+        go build -o hexfetch-ui -v ./...
     
     - name: Upload to GitHub Release
       if: github.event_name == 'release'
