--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,5 +42,5 @@ jobs:
       if: github.event_name == 'release'
       uses: softprops/action-gh-release@v2
       with:
-        name: hexfetch-ui
-        path: hexfetch-ui
+        files: hexfetch-ui
+        draft: true
