--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.24'
+        go-version: '1.24.4'  # Use Go 1.24.4
 
     - name: Install fyne-cross
       run: |
@@ -32,10 +32,9 @@ jobs:
     - name: Build AppImage
       run: |
         go mod edit -go=1.24
-        go mod edit -require fyne.io/fyne@v1.4.3
-        go mod edit -droprequire fyne.io/fyne/v2
+        go mod edit -require fyne.io/fyne/v2@v2.4.5
         go mod tidy
-        fyne-cross linux -arch=amd64 -icon icon.png -name "Hexfetch UI" -app-id com.hexfetch.ui -image golang:1.24
+        fyne-cross linux -arch=amd64 -icon icon.png -name "Hexfetch UI" -app-id com.hexfetch.ui -image fyneio/fyne-cross-images:base-latest
         mv ./fyne-cross/dist/linux-amd64/*.AppImage hexfetch.AppImage
 
     - name: Upload hexfetch-ui AppImage as artifact
