--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.24.4'  # Use Go 1.24.4
+        go-version: '1.24.2'
 
     - name: Install fyne-cross
       run: |
