--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write  # Grant write access to repository contents for release uploads
     steps:
     - uses: actions/checkout@v4
 
@@ -23,29 +23,24 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.24.2'
-
-    - name: Install fyne-cross
+        go-version: '1.24'
+        
+    - name: Build
       run: |
-        go install github.com/fyne-io/fyne-cross@latest
-
-    - name: Build AppImage
-      run: |
-        go mod edit -go=1.24
-        go mod edit -require fyne.io/fyne/v2@v2.4.5
+        go mod edit -require fyne.io/fyne@v1.4.3
+        go mod edit -droprequire fyne.io/fyne/v2
         go mod tidy
-        fyne-cross linux -arch=amd64 -icon icon.png -name "Hexfetch UI" -app-id com.hexfetch.ui -image golang:1.24
-        mv ./fyne-cross/dist/linux-amd64/*.AppImage hexfetch.AppImage
+        go build -o hexfetch-ui
 
-    - name: Upload hexfetch-ui AppImage as artifact
+    - name: Upload hexfetch-ui as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: hexfetch-appimage
-        path: hexfetch.AppImage
-
+        name: hexfetch-ui
+        path: hexfetch-ui
+    
     - name: Upload to GitHub Release
       if: github.event_name == 'release'
       uses: softprops/action-gh-release@v2
       with:
-        files: hexfetch.AppImage
+        files: hexfetch-ui
         draft: true
